Enhance pet creation tests by generating default category and updating pet attributes